--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,12 @@
         font-weight: 400;
         justify-content: space-between;
         list-style: none;
+        margin-right: 10px;
     }
+    .nav-links > ul > li {
+        margin-right: 10px;
+        margin-top: 5px;
+      }
 
 
 /*****      Main Sections      *****/
