--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
 
 /*****      Header      *****/
 
+.header{
+    display: flex;
+}
 .header-container-top{
     background-color: #222222;
     color: #F3F3F3;
@@ -34,6 +37,7 @@
 
 .logo{
     width: 200px;
+    align-items: center;
 }
 
 .nav-links{
@@ -45,36 +49,87 @@
 
     .nav-links > ul {
         display: flex;
-        font-size: 13px;
+        font-size: 16px;
         font-weight: 400;
         justify-content: space-between;
         list-style: none;
+        padding: 10px;
         margin-right: 10px;
     }
     .nav-links > ul > li {
         margin-right: 10px;
         margin-top: 5px;
-      }
+    }
 
 
 /*****      Main Sections      *****/
 
+.main{
+    display: flex;
+    flex-direction: column;
+}
+
 #Banner {
+    padding: 10px;
     background-image: url(../img/bowl-background.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 409px;
-}
-    #Banner > p, #Banner > h2 {
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    padding: 10px;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+.banner-textos{
+    margin:10px;
+    text-align: center;
+    color: #3C2313;
+}
+
+#Banner h2 {
+    background-color: #FFF;
+    font-size: 30px;
+    padding: 15px;
+}
+
+#Banner p {
+    font-size: 20px;
+    font-weight: 400;
+    padding: 15px;
+}
+
+#Banner button {
+    background-color: #F0A83E;
+    border-radius: 5px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 20px;
+    height: 60px;
+    text-align: center;
+    width: 180px;
 }
 
 #Productos {
-    text-align: center;
     color: #3C2313;
+    margin: 20px;
+    padding: 10px;
+    text-align: center;
+}
+
+.cat-productos{
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+}
+
+#Productos h1 {
+    color: #3C2313;
+    font-size: 40px;
+    font-weight: 700;
 }
 
 .price {
@@ -82,22 +137,51 @@
 }
 
 .card-container{
-    margin-top: 100px;
-    margin-right: auto;
-    margin-bottom: 100px;
-    margin-left: auto;
-    width: 50%;
-    height: auto;
     display: flex;
-    justify-content: space-between;
+    height: auto;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 100px;
     text-align: center;
 }
+
+.card1,
+.card2,
+.card3{
+    background-color: #FBFAF6;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    height: auto;
+    padding: 20px;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card1:hover,
+.card2:hover,
+.card3:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
 
 /*****      Footer      *****/
 
 footer{
     background-color: #3C2313;
     color: #FFFFFF;
+    height: auto;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.icons{
+    align-items: center;
+    margin: 50px;
+}
+
+.icons i{
+    font-size: 50px;
+    margin: 15px;
 }
 
     footer p{
@@ -107,11 +191,11 @@ footer{
 .footer-end{
     background-color: #222222;
     color: #FFFFFF;
-    font-size: 10px;
-    font-weight: 700;
-    height: 20px;
-    line-height: 11.72px;
-    padding: 2px;
+    font-size: 14px;
+    font-weight: 400;
+    height: auto;
+    padding: 10px;
     text-align: center;
     width: 100%;
+    align-items: center;
 }
