--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-*{
+* {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -10,10 +10,11 @@
 
 /*****      Header      *****/
 
-.header{
+.header {
     display: flex;
 }
-.header-container-top{
+
+.header-container-top {
     align-items: center;
     background-color: #222222;
     color: #F3F3F3;
@@ -25,7 +26,7 @@
     padding: 5px;
 }
 
-.header-list{
+.header-list {
     display: flex;
     justify-content: space-between;
     line-height: 1.5em;
@@ -33,43 +34,48 @@
     padding: 5px;
 }
 
-.header-container-nav{
+.header-container-nav {
     background-color: #F0A83E;
 }
 
-.logo{
+.logo {
     align-items: center;
     margin-top: 10px;
     width: 200px;
 }
 
-.nav-links{
+.burger-menu {
+    display: none;
+}
+
+.nav-links {
     color: #FFFFFF;
     display: flex;
     justify-content: space-between;
     padding: 15px;
 }
 
-    .nav-links > ul {
-        cursor: pointer;
-        display: flex;
-        flex-wrap: wrap;
-        font-size: 16px;
-        font-weight: 400;
-        justify-content: space-between;
-        list-style: none;
-        margin-right: 10px;
-        padding: 10px;
-    }
-    .nav-links > ul > li {
-        margin-right: 10px;
-        margin-top: 5px;
-    }
+.nav-links>ul {
+    cursor: pointer;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 16px;
+    font-weight: 400;
+    justify-content: space-between;
+    list-style: none;
+    margin-right: 10px;
+    padding: 10px;
+}
+
+.nav-links>ul>li {
+    margin-right: 10px;
+    margin-top: 5px;
+}
 
 
 /*****      Main Sections      *****/
 
-.main{
+.main {
     display: flex;
     flex-direction: column;
 }
@@ -88,9 +94,9 @@
     width: 100%;
 }
 
-.banner-textos{
+.banner-textos {
     color: #3C2313;
-    margin:10px;
+    margin: 10px;
     text-align: center;
 }
 
@@ -125,7 +131,7 @@
     text-align: center;
 }
 
-.cat-productos{
+.cat-productos {
     align-items: center;
     display: flex;
     justify-content: space-around;
@@ -141,36 +147,36 @@
     color: #F0A83E;
 }
 
-.card-container{
+.card-container {
     align-items: center;
     display: flex;
     height: auto;
     justify-content: space-evenly;
     margin: 10%;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     text-align: center;
 }
 
 .card1,
 .card2,
-.card3{
+.card3 {
     background-color: #FBFAF6;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     height: auto;
     padding: 20px;
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
 .card1:hover,
 .card2:hover,
-.card3:hover{
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.card3:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 
 /*****      Footer      *****/
 
-footer{
+footer {
     align-items: center;
     background-color: #3C2313;
     color: #FFFFFF;
@@ -181,26 +187,26 @@ footer{
     justify-content: space-between;
 }
 
-.logo-footer{
+.logo-footer {
     margin-right: 10%;
 }
 
-.icons{
+.icons {
     align-items: center;
     margin: 50px;
     align-items: flex-start;
 }
 
-.icons i{
+.icons i {
     font-size: 50px;
     margin: 15px;
 }
 
-    footer p{
-        color: #8A8787;
-    }
+footer p {
+    color: #8A8787;
+}
 
-.footer-end{
+.footer-end {
     align-items: center;
     background-color: #222222;
     color: #FFFFFF;
@@ -210,4 +216,29 @@ footer{
     padding: 10px;
     text-align: center;
     width: 100%;
+}
+
+/**      RESPONSIVE      **/
+
+/**     Tablet      **/
+@media screen and (max-width: 768px) {
+    .burger-menu {
+        display: inline-block;
+        color: white;
+    }
+
+    .nav-links>ul {
+        display: none;
+    }
+}
+
+/**     Mobile      **/
+@media screen and (max-width: 480px) {
+    .burger-menu {
+        display: inline-block;
+    }
+
+    .nav-links>ul {
+        display: none;
+    }
 }
