--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,11 @@
 
 .logo {
     align-items: center;
-    margin-top: 10px;
     width: 200px;
 }
 
-.burger-menu {
+.burger-menu,
+.fa{
     display: none;
 }
 
@@ -157,19 +157,16 @@
     text-align: center;
 }
 
-.card1,
-.card2,
-.card3 {
+.card {
     background-color: #FBFAF6;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     height: auto;
-    padding: 20px;
+    padding: 2em;
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    flex-wrap: wrap;
 }
 
-.card1:hover,
-.card2:hover,
-.card3:hover {
+.card:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -222,9 +219,18 @@ footer p {
 
 /**     Tablet      **/
 @media screen and (max-width: 768px) {
+    .header-container-nav {
+        align-items: center;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+    }
+
     .burger-menu {
+        color: #FFF;
         display: inline-block;
-        color: white;
+        font-size: 1.5em;
+        padding: 15px;
     }
 
     .nav-links>ul {
@@ -236,6 +242,7 @@ footer p {
 @media screen and (max-width: 480px) {
     .burger-menu {
         display: inline-block;
+        color: #FFF;
     }
 
     .nav-links>ul {
