--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,27 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+.form form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn {
+    flex-direction: row;
+}
+
+input {
+    background-color: #3C2313;
+    border-radius: 5px; 
+    color: #FFF;
+    height: 30px;
+    padding: 10px;
+    width: 30%;
+}
+
+
 
 /*****      Footer      *****/
 
