Agrego div naranja previo al footer, falta icono e input

--- a/css/style.css
+++ b/css/style.css
@@ -199,25 +199,32 @@ input::placeholder{
     color: #FFF;
 }
 
-.btn-reset,
-.btn-send{
+#btn-reset,
+#btn-send{
     border-radius: 10px;
     border: none;
     color: white;
     height: 2em;
     width: 7%;
     margin: 5px;
+    cursor: pointer; 
 }
 
-.btn-reset{
+#btn-reset{
     background-color: #8A8787;
 }
 
-.btn-send{
+#btn-send{
     background-color: #F0A83E;
 }
 
 /*****      Footer      *****/
+
+.pre-footer{
+    background-color: #F0A83E;
+    width: 100%;
+    height: 3em;
+}
 
 footer {
     align-items: center;
