Correcciones responsivas y agrego contenido en pre-footer

--- a/css/style.css
+++ b/css/style.css
@@ -180,34 +180,41 @@
     justify-content: center;
 }
 
-.btn {
-    flex-direction: row;
+form > h2 {
+    font-weight: bold;
+    margin: 20px;
 }
 
-input {
+form > input {
     background-color: #3C2313;
-    border-radius: 10px; 
+    border-radius: 15px; 
     border: none;
     color: #FFF;
-    height: 3em;
+    height: 4em;
     padding: 10px;
     width: 30%;
-    margin: 5px;
+    margin: 10px;
 }
 
-input::placeholder{
+form > input::placeholder{
     color: #FFF;
+}
+
+.btn {
+    flex-direction: row;
+    margin: 20px;
 }
 
 #btn-reset,
 #btn-send{
-    border-radius: 10px;
+    border-radius: 50px;
     border: none;
     color: white;
-    height: 2em;
-    width: 7%;
-    margin: 5px;
     cursor: pointer; 
+    font-size: 15px;
+    height: 2.5em;
+    margin: 5px;
+    width: 7%;
 }
 
 #btn-reset{
@@ -223,9 +230,50 @@ input::placeholder{
 .pre-footer{
     background-color: #F0A83E;
     width: 100%;
-    height: 3em;
+    height: 4em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
 }
 
+    .pre-1{
+        display: flex;
+        width: 100%;
+    }
+
+    .pre-1 > img {
+        margin-right: 15px;
+    }
+
+    .pre-1 > h3 {
+        color: #FFF;
+        font-weight: 400;
+    }
+
+.pre-2 {
+    display: flex;
+    width: 100%;
+}
+
+    .pre-2 > input {
+        height: 40px;
+        background-color:  #fff;
+        border: none;
+        width: 80%;
+        border-radius: 10px;
+        padding: 10px;
+        margin-right: 10px;
+    }
+
+    .pre-2 > button {
+        border: none;
+        background-color: #3C2313;
+        color: #FFF;
+        border-radius: 15px;
+        width: 10%;
+        font-size: 12px;
+    }
 footer {
     align-items: center;
     background-color: #3C2313;
@@ -307,6 +355,49 @@ footer p {
     .nav-links>ul {
         display: none;
     }
+    
+    form > input {
+        width: 90%;
+    }
+
+    .btn{
+        display: flex;
+    }
+
+    #btn-reset,
+    #btn-send {
+        width: 50%;
+        height: 40px;
+        font-size: 15px;
+    }
+
+    .pre-footer {
+        flex-direction: column;
+        justify-content: center;
+        height: 90px;
+        padding: 20px;
+    }
+
+    .pre-1,
+    .pre-2{
+        justify-content: center;
+        margin: 5px;
+    }
+    .pre-2 > input {
+        width: 40%;
+    }
+
+    footer{
+        flex-direction: column-reverse;
+    }
+
+    .icons{
+        position: center;
+    }
+    .logo-footer {
+        position: center;
+        margin: 10px;
+    }
 }
 
 /**     Mobile      **/
@@ -320,8 +411,4 @@ footer p {
         display: none;
     }
 
-    .logo-footer {
-        position: relative;
-        left: 70px;
-    }
 }
