--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,7 @@
     display: flex;
     font-weight: 400;
     justify-content: space-between;
-    padding-left: 2em;
-    padding-top: 1em;
-    padding: 5px;
+    padding: 10px;
 }
 
 .header-list {
@@ -32,6 +30,11 @@
     line-height: 1.5em;
     list-style: none;
     padding: 5px;
+    background-color: #222222;
+    border: none;
+    color: #FFF;
+    font-size: 14px;
+    cursor: pointer;
 }
 
 .header-container-nav {
@@ -47,6 +50,7 @@
     display: none;
     position: relative;
     z-index: -10;
+    color: #F0A83E;
 }
 
 .nav-links {
@@ -133,10 +137,16 @@
     text-align: center;
 }
 
+#patita-productos{
+    margin: 10px;
+}
+
 .cat-productos {
     align-items: center;
     display: flex;
     justify-content: space-around;
+    font-size: 20px;
+    word-spacing: 10px
 }
 
 #Productos h1 {
@@ -152,20 +162,20 @@
 .card-container {
     align-items: center;
     display: flex;
+    flex-wrap: wrap;
     height: auto;
     justify-content: space-evenly;
-    margin: 10%;
-    flex-wrap: wrap;
+    margin: 2%;
     text-align: center;
 }
 
 .card {
     background-color: #FBFAF6;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    flex-wrap: wrap;
     height: auto;
     padding: 2em;
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    margin: 10px;
 }
 
 .card:hover {
@@ -174,30 +184,32 @@
 
 /**     Formulario      **/
 .form form{
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
 }
 
 form > h2 {
     font-weight: bold;
     margin: 20px;
+    font-size: 30px;
 }
 
 form > input {
     background-color: #3C2313;
-    border-radius: 15px; 
+    border-radius: 24px;
     border: none;
     color: #FFF;
-    height: 4em;
-    padding: 10px;
-    width: 30%;
+    height: 5em;
     margin: 10px;
+    padding: 20px;
+    width: 43%;
 }
 
 form > input::placeholder{
     color: #FFF;
+    font-size: 16px;
 }
 
 .btn {
@@ -205,36 +217,36 @@ form > input::placeholder{
     margin: 20px;
 }
 
-#btn-reset,
-#btn-send{
+.btn-reset,
+.btn-send{
     border-radius: 50px;
     border: none;
     color: white;
-    cursor: pointer; 
-    font-size: 15px;
-    height: 2.5em;
+    cursor: pointer;
+    font-size: 20px;
+    height: 2.7em;
     margin: 5px;
-    width: 7%;
+    width: 15%;
 }
 
-#btn-reset{
+.btn-reset{
     background-color: #8A8787;
 }
 
-#btn-send{
+.btn-send{
     background-color: #F0A83E;
 }
 
 /*****      Footer      *****/
 
 .pre-footer{
-    background-color: #F0A83E;
-    width: 100%;
-    height: 4em;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
+    background-color: #F0A83E;
+    display: flex;
+    height: 4em;
+    justify-content: space-between;
     padding: 10px;
+    width: 100%;
 }
 
     .pre-1{
@@ -249,6 +261,7 @@ form > input::placeholder{
     .pre-1 > h3 {
         color: #FFF;
         font-weight: 400;
+        letter-spacing: .1em;
     }
 
 .pre-2 {
@@ -257,23 +270,24 @@ form > input::placeholder{
 }
 
     .pre-2 > input {
-        height: 40px;
         background-color:  #fff;
-        border: none;
-        width: 80%;
         border-radius: 10px;
-        padding: 10px;
+        border: none;
+        height: 40px;
         margin-right: 10px;
+        padding: 10px;
+        width: 80%;
     }
 
     .pre-2 > button {
-        border: none;
         background-color: #3C2313;
-        color: #FFF;
         border-radius: 15px;
-        width: 10%;
+        border: none;
+        color: #FFF;
         font-size: 12px;
+        width: 18%;
     }
+
 footer {
     align-items: center;
     background-color: #3C2313;
@@ -283,6 +297,8 @@ footer {
     flex-wrap: wrap;
     height: auto;
     justify-content: space-between;
+    width: 100%;
+    padding: 10px;
 }
 
 .logo-footer {
@@ -290,25 +306,25 @@ footer {
 }
 
 .icons {
-    justify-content: space-between;
-    margin: 50px;
     align-items: flex-start;
     display: flex;
+    justify-content: space-between;
+    margin: 50px;
 }
 
 .icons-contacto{
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .contacto{
-    justify-content: space-between;
     align-items: center;
-    padding:10px;
-    margin: 10px;
     height: auto;
+    justify-content: space-between;
     line-height: 2.5em;
+    margin: 10px;
+    padding:10px;
 }
 
 .icons i {
@@ -338,10 +354,13 @@ footer p {
 @media screen and (max-width: 768px) {
     .header-container-nav {
         align-items: center;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-between;
-        position: relative;
+        position: fixed;
+        top: 0;
+        width: 100%;
         z-index: 10;
     }
 
@@ -364,13 +383,13 @@ footer p {
         display: flex;
     }
 
-    #btn-reset,
-    #btn-send {
+    .btn-reset,
+    .btn-send {
         width: 50%;
         height: 40px;
         font-size: 15px;
     }
-
+    /*  Pre-Footer  */
     .pre-footer {
         flex-direction: column;
         justify-content: center;
@@ -386,17 +405,18 @@ footer p {
     .pre-2 > input {
         width: 40%;
     }
-
+    /*  Footer  */
     footer{
         flex-direction: column-reverse;
     }
 
     .icons{
-        position: center;
+        margin-top: 0px;
     }
     .logo-footer {
-        position: center;
-        margin: 10px;
+        margin: 20px;
+        height: auto;
+        width: 10em;
     }
 }
 
@@ -411,4 +431,7 @@ footer p {
         display: none;
     }
 
+    #Banner {
+        align-items: center;
+    }
 }
