--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,14 @@
 }
 
 .header-container-nav {
+    align-items: center;
     background-color: #F0A83E;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 10;
 }
 
 .logo {
