--- a/css/style.css
+++ b/css/style.css
@@ -316,6 +316,7 @@ form > input::placeholder{
         border-radius: 15px;
         border: none;
         color: #FFF;
+        cursor: pointer;
         font-size: 16px;
         width: 18%;
     }
